--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/bg_gradient">
+    android:background="@drawable/bg_gradient_color">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
